modify index.html and add login.html

--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome to git tutorial</h1>
-    <p>FER201m</p>
+    <h1>login page</h1>
 </body>
 </html>
